# FPS-game---aim-training

./: .gitignore  CMakeLists.txt  README.md
freeglut/lib/: freeglut_staticd.lib
freeglut/lib/pkgconfig/: freeglut.pc
include/: BitMapHandler.h  Cube.h  Doxyfile  DrawableObject.h  Engine.h  HUDRenderer.h  HeldWeapon.h  ModelObject.h  Observer.h  Shader.h  ShapeObject.h  TargetObject.h  TransformableObject.h  Wall.h
models/: Animated Human.mtl  Human.mtl  P90.mtl
shaders/: debug_fragment_shader.glsl  debug_vertex_shader.glsl  depth_fragment_shader.glsl  depth_vertex_shader.glsl  fragment_hud_shader.glsl  fragment_shader.glsl  vertex_hud_shader.glsl  vertex_shader.glsl
src/: BitMapHandler.cpp  BitMapHandler.h  Cube.cpp  Cube.h  DrawableObject.h  Engine.cpp  Engine.h  GameObject.h  HUDRenderer.cpp  HeldWeapon.cpp  ModelObject.cpp  Observer.cpp  Observer.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  Shader.cpp  TargetObject.cpp  TransformableObject.h  UpdatableObject.h  Wall.cpp  Wall.h  main.cpp
